Work on mobile menu: animate the hamburger, for now it's bugged, it doesn't have paddings between lines.

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -17,6 +17,7 @@
     //to align elements along the cross axes
     align-self: stretch;
     // box-shadow: 0 0.2rem 0.1rem grey;
+    padding: 1.1rem 0;
 
     &__logo-container {
         display: flex;
